# Real-Time-Facial-Emotion-Detection

./: .gitignore  LICENSE  main.py  project_structure.yaml  pyproject.toml  requirements.txt
.zen/: config.yaml
configs/: data_config.yaml  train_config.yaml
pipelines/: data_pipeline.py  training_pipeline.py
scripts/: create_structure.py
steps/: data_ingestion.py  data_preprocessing.py  train_model.py
test/: hello_pipeline.py
utils/: config_loader.py  data_loader.py  logger.py  model_builders.py
