[project]
name = "real-time-facial-emotion-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.2.0",
    "kaggle>=1.7.4.5",
    "opencv-python>=4.12.0.88",
    "pyyaml>=6.0.2",
    "zenml[server]>=0.84.3",
]
