[project]
name = "real-time-facial-emotion-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gdown>=5.2.0",
    "kaggle>=1.7.4.5",
    "keras>=3.11.3",
    "mlflow>=3.3.2",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.1",
    "tensorflow>=2.20.0",
    "zenml[server]>=0.84.3",
]
